--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,17 +36,46 @@
 .block-container{
     padding: 0 !important;
 }
-.navbar{
-    font-family: 'Trebuchet MS', sans-serif;
-    position: fixed;
-    width: 100%;
-    z-index: 99999999999999999999;
-    left: 0rem;
-    top: 0rem;
-    height: 55px;
 
+
+.industries-section{
+    background-color: #efae16;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5vh 0;
+}
+.industries-section h1{
+    color: white;
+}
+.industries-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: auto;
+    gap: 50px;
+}
+.grid-item {
+    width: 250px;
+    height: 250px;
+    transition: 200ms;
+}
+.grid-item:hover{
+    box-shadow: 5px 10px 32px rgba(0,0,0,0.5);
 }
 
+.who-section{
+    padding: 5vh 10vw;
+}
+.who-section img{
+    width: 100%;
+    height: 100%;
+}
+.grid-item img{
+    width: 100%;
+    height: 100%;
+}
 a img{
     width:auto;
     height: auto;
@@ -54,16 +83,29 @@ a img{
     max-height: 72px;
     max-width: 200px;
 }
+
+.navbar{
+    font-family: 'Trebuchet MS', sans-serif;
+    position: fixed;
+    width: 100%;
+    background-color: white;
+    z-index: 99999999999999999999;
+    left: 0rem;
+    top: 0rem;
+    padding: 24px 24px;
+    
+}
 .navitem{
     float: left;
     display: block;
-    color: rgb(49, 51, 63);
     text-align: center;
     padding: 10px 20px;
     text-decoration: none !important;
     border-bottom: 2px solid transparent;
     font-size: 14px;
     font-family: 'Trebuchet MS', sans-serif;
+
+    color: rgb(41, 3, 3) !important;
 }
 
 .navitem:hover{
