--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,7 +34,7 @@
     align-items: center;
 }
 .block-container{
-    padding: 0 !important;
+    /* padding: 0 !important; */
 }
 
 
@@ -219,3 +219,6 @@ iframe{
 }
 
   
+.page-padding{
+    padding: 10vh 5vw;
+}
